trying to make this a serious project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "obie",
   "main": "index.htm",
+  "scripts": {
+  	"watch-scss": "scss --watch assets/main.scss",
+  	"watch": "npm run watch-scss"
+  },
   "version": "0.0.1",
   "devDependencies": {},
   "dependencies": {
