workspace manager can spawn workspaces! kernel.kill() woop!

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "obie",
   "main": "index.htm",
   "scripts": {
-  	"watch-scss": "scss --watch assets/main.scss",
-  	"watch": "npm run watch-scss"
+    "watch-scss": "scss --watch assets/main.scss",
+    "watch": "npm run watch-scss"
   },
   "version": "0.0.1",
   "devDependencies": {},
   "dependencies": {
-    "signalkit": "~0.2.4"
+    "signalkit": "~0.2.4",
+    "domutil": "~0.3.2"
   }
 }
